# hyper

./: .gitignore  README.md  arms_new.py  ffhq.sh  pyproject.toml  train.sh
core/: drifting_loss.py  rainman.py
core/models/: ema.py
ffhq/: drift_ffhq.py  encode_latents.py  eval_ckpt_fid_emd.py  fid_score.py  reinforce_ffhq.py  reinforce_sinkh_ffhq.py
mnist/: encode_latents.py  encode_vmf_latents.py  eval_acc.py  eval_emd.py  make_figure.py  models.py  oracle_emd.py  policy_emd.py  policy_gradient.py  test_projection_methods.py  train_ae.py  train_drifting.py  train_reinforce.py  vmf_vae.py
pretrained/ae/: ae_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p005_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p01_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p025_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p02_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p03_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p04_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p05_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_baseline_tau0p1_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_sinkhorn_tau0p005_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_sinkhorn_tau0p01_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_sinkhorn_tau0p025_l2sq/: ckpt_final.pt
pretrained/mnist_gaussian/mnist_sinkhorn_tau0p02_l2sq/: ckpt_final.pt
toy/: Gen_Modeling.py  plot_w2_meanstd.py
(+20 files in other folders)
